--- a/travel_recommendation.css
+++ b/travel_recommendation.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgb(19, 17, 17);
+    background-color: black;
     color: white;
     padding: 10px;
     text-align: justify;
